added collision detection etc made it like paper.io 'ey

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="hud">Players: <span id="playerCount">0</span></div>
   <canvas id="gameCanvas"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script src="main.js"></script>
