Implement elimination, scoring and leaderboard HUD

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="hud">Players: <span id="playerCount">0</span></div>
+  <div id="hud">Players: <span id="playerCount">0</span><br/><ul id="leaderboard"></ul></div>
   <canvas id="gameCanvas"></canvas>
   <script src="/socket.io/socket.io.js"></script>
   <script src="main.js"></script>
